# nonogram

./: .appveyor.yml  .gitignore  .hgignore  .hgsigs  .hgtags  .travis.yml  LICENSE  Makefile  Makefile.dep  Makefile.in  common.c  common.h  config.c  config.h  configure.ac  io.c  io.h  memory.c  memory.h  nonogram.c  nonogram.h  queue.c  queue.h  stdbool.h  term.c  term.h
.github/workflows/: ci.yml
debian/: changelog  control  copyright  dirs  nonogram-data.install  nonogram.install  nonogram.lintian-overrides  nonogram.manpages  rules
doc/: Makefile  changelog  manpage.pod  nonogram.xml
private/: autoclean  build-source-tarball  update-version
tools/: build-source-tarball
web/: index.html  style.css
